--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "next": "15.4.6"
+    "vwo-smartcode-nextjs": "1.3.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "3.3.1",
     "eslint": "9.33.0",
-    "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "3.3.1"
+    "eslint-config-next": "15.4.6"
   }
 }
