--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.4.6",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "vwo-fme-node-sdk": "1.25.2",
     "vwo-smartcode-nextjs": "1.3.0"
   },
   "devDependencies": {
