--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.4.6",
+    "dotenv": "17.2.1",
+    "next": "15.5.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "vwo-fme-node-sdk": "1.25.2",
@@ -18,6 +19,6 @@
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
     "eslint": "9.33.0",
-    "eslint-config-next": "15.4.6"
+    "eslint-config-next": "15.5.0"
   }
 }
